Refactorisación: Se formateo el codigo implementado validaciones del modulo de auth y docs.
Detalles del cambio:

- Se testeo el modulo de autenticacion.
- Se socumento el modulo con scramble docs.
- Se formateo todo el codigo con vendor/bin/pint.

Por: Esteban David Ricardo Fuentes.

Fecha: 27/09/2025.

Version: 0.24.1

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:AcQB3kpd9P57zlg80kAMkv9VSBM+wU4zY+QH1rAQgL4=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -20,12 +20,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=ftoliboy_toliboy_data
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_CONNECTION=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
@@ -64,5 +64,9 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-VITE_APP_NAME="${APP_NAME}"
+APP_TIMEZONE=America/Bogota
 
+VITE_APP_NAME="${APP_NAME}"
+NOTIFICATIONS_TTL_DAYS=3
+
+JWT_SECRET=
