--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^3.8",
         "pestphp/pest-plugin-laravel": "^3.2",
+        "phiki/phiki": "*",
         "reliese/laravel": "^1.4"
     },
     "autoload": {
