Update Dockerfile to install zip extension and configure MySQL settings in my.cnf

--- a/my.cnf
+++ b/my.cnf
@@ -1,2 +1,5 @@
 [mysqld]
-log_bin_trust_function_creators = 1
+innodb_buffer_pool_size = 64M
+innodb_log_file_size = 32M
+max_connections = 50
+query_cache_size = 0
