--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     index index.php index.html;
-    server_name localhost;
+    server_name 18.188.114.143;
     root /var/www/public;
 
     location / {
