Add location block for serving API documentation in nginx.conf

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,13 @@ server {
     server_name 18.188.114.143;
     root /var/www/public;
 
+    # Servir documentación estática de API
+    location /docs/api/ {
+        alias /var/www/public/docs/api/;
+        index index.html;
+        try_files $uri $uri/ =404;
+    }
+
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
