Implementación de autenticación y autorización para acceso a documentación API, incluyendo la creación de vistas de login y manejo de sesiones.
Por: Esteban David Ricardo Fuentes

Fecha: 06/10/2025

Version: 0.26.4

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,6 +4,9 @@
     </IfModule>
 
     RewriteEngine On
+    Header always unset X-Frame-Options
+    Header always unset Content-Security-Policy
+    Header always set X-Frame-Options "ALLOWALL"
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
