--- a/nginx.conf
+++ b/nginx.conf
@@ -1,21 +1,14 @@
 server {
     listen 80;
     index index.php index.html;
-    server_name 18.188.114.143;
+    server_name localhost;
     root /var/www/public;
-
-    # Servir documentación estática de API
-    location /docs/api/ {
-        alias /var/www/public/docs/api/;
-        index index.html;
-        try_files $uri $uri/ =404;
-    }
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location ~ \.(php)$ {
+    location ~ \.php$ {
         fastcgi_pass app:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
