Función: Añadir la dependencia de Pusher e implementar la difusión de mensajes
Estilo: Actualizar las vistas de inicio de sesión y documentación con un nuevo esquema de colores y estilos

Corrección: Mejorar el diseño y el estilo de los informes para una mejor legibilidad

Tarea: Actualizar las configuraciones de Docker para entornos de desarrollo y producción

Tarea: Cambiar los permisos de los archivos .gitignore en los directorios de almacenamiento

Función: Crear un caso de uso de producto para las operaciones de gestión de productos

Función: Añadir la configuración de difusión de Pusher en la aplicación

Función: Implementar el evento MensajeEnviado para la difusión de mensajes en tiempo real

Por: Esteban David Ricardo Fuentes

Fecha: 12/10/2025

Version: 0.26.11

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,41 +3,43 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: gestion_toliboy_app
-    container_name: gestion_toliboy_app
+    image: gestion_toliboy_app_dev
+    container_name: gestion_toliboy_app_dev
     restart: unless-stopped
     working_dir: /var/www
     volumes:
-      - ./storage:/var/www/storage
-      - ./bootstrap/cache:/var/www/bootstrap/cache
+      - ./:/var/www
     expose:
       - "9000"
     depends_on:
       - db
     environment:
+      - APP_ENV=local
+      - APP_DEBUG=true
+      - APP_URL=http://localhost
       - DB_CONNECTION=mysql
       - DB_HOST=db
       - DB_PORT=3306
       - DB_DATABASE=toliboy
       - DB_USERNAME=toliboy
       - DB_PASSWORD=toliboy
-    user: www-data
+    user: "${UID:-1000}:${GID:-1000}"
 
   nginx:
     image: nginx:1.25
-    container_name: gestion_toliboy_nginx
+    container_name: gestion_toliboy_nginx_dev
     restart: unless-stopped
     ports:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./public:/var/www/public
+      - ./:/var/www
     depends_on:
       - app
 
   db:
     image: mysql:8.0
-    container_name: gestion_toliboy_db
+    container_name: gestion_toliboy_db_dev
     restart: unless-stopped
     environment:
       MYSQL_DATABASE: toliboy
@@ -47,8 +49,8 @@ services:
     ports:
       - "3307:3306"
     volumes:
-      - dbdata:/var/lib/mysql
+      - dbdata_dev:/var/lib/mysql
       - ./my.cnf:/etc/mysql/conf.d/my.cnf
 
 volumes:
-  dbdata:
+  dbdata_dev:
