--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,14 @@ VITE_APP_NAME="${APP_NAME}"
 NOTIFICATIONS_TTL_DAYS=3
 
 JWT_SECRET=
+
+BROADCAST_DRIVER=pusher
+
+PUSHER_APP_ID=tu_app_id
+PUSHER_APP_KEY=tu_app_key
+PUSHER_APP_SECRET=tu_app_secret
+PUSHER_HOST=
+PUSHER_PORT=443
+PUSHER_SCHEME=https
+PUSHER_APP_CLUSTER=mt1
+
