--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,20 +1,13 @@
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: gestion_toliboy_app
+    image: gestion_toliboy_app:latest
     container_name: gestion_toliboy_app
     restart: unless-stopped
     working_dir: /var/www
-    volumes:
-      - ./storage:/var/www/storage
-      - ./bootstrap/cache:/var/www/bootstrap/cache
-    expose:
-      - "9000"
-    depends_on:
-      - db
     environment:
+      - APP_ENV=production
+      - APP_DEBUG=false
+      - APP_URL=https://tuservidor.com
       - DB_CONNECTION=mysql
       - DB_HOST=db
       - DB_PORT=3306
@@ -22,6 +15,11 @@ services:
       - DB_USERNAME=toliboy
       - DB_PASSWORD=toliboy
     user: www-data
+    volumes:
+      - ./storage:/var/www/storage
+      - ./bootstrap/cache:/var/www/bootstrap/cache
+    depends_on:
+      - db
 
   nginx:
     image: nginx:1.25
@@ -45,10 +43,10 @@ services:
       MYSQL_PASSWORD: toliboy
       MYSQL_ROOT_PASSWORD: rootpassword
     ports:
-      - "3307:3306"
+      - "3306:3306"
     volumes:
-      - dbdata:/var/lib/mysql
+      - dbdata_prod:/var/lib/mysql
       - ./my.cnf:/etc/mysql/conf.d/my.cnf
 
 volumes:
-  dbdata:
+  dbdata_prod:
