--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,18 +24,21 @@ services:
     user: www-data
 
   nginx:
-    image: nginx:1.25
-    container_name: gestion_toliboy_nginx
-    restart: unless-stopped
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./public:/var/www/public
-      - /etc/letsencrypt:/etc/letsencrypt
-    depends_on:
-      - app
+      image: nginx:1.25
+      container_name: gestion_toliboy_nginx
+      restart: unless-stopped
+      ports:
+          - "80:80"
+          - "443:443"
+      volumes:
+          - ./nginx.conf:/etc/nginx/conf.d/default.conf
+          - ./public:/var/www/public
+          # ✅ Montar certificados self-signed
+          - /etc/ssl/certs/selfsigned.crt:/etc/ssl/certs/selfsigned.crt
+          - /etc/ssl/private/selfsigned.key:/etc/ssl/private/selfsigned.key
+      depends_on:
+          - app
+
 
   db:
     image: mysql:8.0
