Actualiza la configuración de Nginx para utilizar certificados de Let's Encrypt y ajusta el nombre del servidor.
Por:Esteban David Ricardo Fuentes
Fecha: 30/10/2025
version: 0.26.24

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,11 @@
 server {
-    listen 80;
-    return 302 https://$host$request_uri;
-}
-
-server {
     listen 443 ssl;
-
-    server_name _;
-
-    ssl_certificate     /etc/ssl/certs/selfsigned.crt;
-    ssl_certificate_key /etc/ssl/private/selfsigned.key;
-
+    server_name apitoliboy.lat www.apitoliboy.lat;
     root /var/www/public;
     index index.php index.html;
+
+    ssl_certificate     /etc/letsencrypt/live/apitoliboy.lat/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/apitoliboy.lat/privkey.pem;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
