--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,9 +33,7 @@ services:
       volumes:
           - ./nginx.conf:/etc/nginx/conf.d/default.conf
           - ./public:/var/www/public
-          # ✅ Montar certificados self-signed
-          - /etc/ssl/certs/selfsigned.crt:/etc/ssl/certs/selfsigned.crt
-          - /etc/ssl/private/selfsigned.key:/etc/ssl/private/selfsigned.key
+          - /etc/letsencrypt:/etc/letsencrypt:ro
       depends_on:
           - app
 
