--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -28,7 +28,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx.prod.conf:/etc/nginx/conf.d/default.conf
       - ./public:/var/www/public
     depends_on:
       - app
