--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
           - "80:80"
           - "443:443"
       volumes:
-          - ./nginx.conf:/etc/nginx/conf.d/default.conf
+          - ./nginx.prod.conf:/etc/nginx/conf.d/default.conf
           - ./public:/var/www/public
           - /etc/letsencrypt:/etc/letsencrypt:ro
       depends_on:
